tests/type-check/good/fun.arr


fun num-id(a :: Number):
  a
end

num-id(5)
