tests/type-check/bad/fun.arr


fun a(n :: Number):
  n
end

a(true)
